# GauBongAI

./: .cursorrules  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: data_management.md
examples/: e1.py  heart_attack_dataset.ipynb
examples/heart_attack/: eda.py  hear_attack.ipynb  heart_attack.py  process_check_quality.py
gauai/: __init__.py  dataframe.py  sandbox.py
gauai/data_management/: context.py  ingestion.py  interfaces.py  managers.py  storage.py
gauai/data_management/plugins/: csv_plugin.py
gauai/data_management/transforms/: cleaner.py
gaubongai/: __init__.py
gaubongai/agents/ml_advisor/: ml_advisor_agent.py
gaubongai/agents/orchestrator/: orchestrator_agent.py
gaubongai/analysis/eda/: __init__.py  analyzers.py  interfaces.py  manager.py
gaubongai/analysis/quality/: __init__.py  checks.py  interfaces.py  manager.py
gaubongai/analysis/statistical/: statistical_analyzer.py
gaubongai/data_management/: __init__.py  context.py  interfaces.py  managers.py  processing.py  storage.py  types.py
gaubongai/data_management/loaders/: __init__.py  csv_loader.py  ontraport_loader.py
gaubongai/data_management/plugins/: __init__.py  csv_plugin.py
gaubongai/data_management/transformers/: __init__.py  cleaner.py  pandas_transformer.py
gaubongai/utils/: logging.py
scripts/: e1.py
tests/: pytest.ini
tests/data_management/: conftest.py  test_context.py  test_data_context.py  test_data_ingestion.py  test_interfaces.py  test_managers.py  test_plugins.py  test_processing.py  test_storage.py
(+13 files in other folders)
