[tool.poetry]
name = "gauai"
version = "0.1.0"
description = ""
authors = ["trangnv <nvtrang91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.23.0"
loguru = "^0.7.3"
smolagents = "^1.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
